# ctf-compass

./: .dockerignore  .env  README.md  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: ci-cd.yml
ctf-autopilot/: .env.example  .gitignore  LICENSE  Makefile  QUICK_START.md  README.md
ctf-autopilot/apps/api/: .dockerignore  Dockerfile  pyproject.toml
ctf-autopilot/apps/api/app/: config.py  database.py  main.py  models.py  schemas.py  tasks.py  websocket.py
ctf-autopilot/apps/api/app/middleware/: rate_limit.py  security.py
ctf-autopilot/apps/api/app/routers/: __init__.py  ai.py  auth.py  config.py  health.py  history.py  jobs.py  system.py  ws.py
ctf-autopilot/apps/api/app/services/: ai_analysis_service.py  evidence_service.py  file_service.py  history_service.py  job_service.py  sandbox_service.py  writeup_service.py
ctf-autopilot/apps/api/tests/: test_auth.py  test_evidence_service.py  test_file_service.py
ctf-autopilot/docs/: API.md  ARCHITECTURE.md  DEBUG.md  RUNBOOK.md  SECURITY.md  THREAT_MODEL.md  USAGE.md
ctf-autopilot/infra/: docker-compose.dev.yml  docker-compose.yml
src/: App.tsx  index.css
src/components/: BackendHealthIndicator.tsx  BackendStatus.tsx  NetworkDiagnostics.tsx  NotificationDropdown.tsx  ProtectedRoute.tsx
src/hooks/: use-auth.tsx  use-backend-status.ts  use-category-detector.ts  use-challenge-templates.ts  use-job-progress.ts  use-jobs.tsx  use-notifications.tsx  use-websocket.ts
src/lib/: api.ts  backend-url.ts  confetti.ts  ctf-tools.ts  mock-data.ts  pdf-report.ts  (+2 more)
supabase/: config.toml
(+61 files in other folders)
